# fast-food

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.simple  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml
app/: __init__.py  create_app.py
app/core/: config.py  logging.py
tests/: conftest.py  test_health.py
