[project]
name = "fast-food"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi-limiter>=0.1.6",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "requests>=2.31.0",
    "sentry-sdk[fastapi]>=2.33.2",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
]
